--- a/kafka-producers/requirements.txt
+++ b/kafka-producers/requirements.txt
@@ -1,4 +1,6 @@
-kafka-python==2.0.2
-opencv-python==4.8.1.78
-numpy==1.24.3
-Pillow==10.0.0
+kafka-python>=2.0.2
+opencv-python>=4.8.0
+numpy>=1.24.0
+Pillow>=10.0.0
+python-dotenv>=1.0.0
+pyyaml>=6.0
