--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -138,7 +138,7 @@ services:
 
   # ================== SPARK CLUSTER ==================
   spark-master:
-    image: bitnami/spark:3.4.0
+    image: spark-yolo:latest
     container_name: spark-master
     environment:
       - SPARK_MODE=master
@@ -156,7 +156,7 @@ services:
       - surveillance-net
 
   spark-worker-1:
-    image: bitnami/spark:3.4.0
+    image: spark-yolo:latest
     container_name: spark-worker-1
     environment:
       - SPARK_MODE=worker
@@ -176,7 +176,7 @@ services:
       - surveillance-net
 
   spark-worker-2:
-    image: bitnami/spark:3.4.0
+    image: spark-yolo:latest
     container_name: spark-worker-2
     environment:
       - SPARK_MODE=worker
